--- a/react/package.json
+++ b/react/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
